# document-data-extraction

./: .gitignore  README.md  main.py  pyproject.toml
docs/: document_extraction_prototype.md
notebooks/: demo.ipynb
results/: results.json
src/: classifier.py  extract.py  ingest.py  ocr.py  pipeline.py  preprocess.py  utils.py
